# OpenEnv-Hackathon

./: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  schemas.py
api/: server.py
env/: __init__.py  evidence.py  incident_env.py  moderation_env.py
server/: __init__.py  app.py
tasks/: __init__.py  catalog.py  easy.py  grader.py  hard.py  medium.py
